# advanced_programming_2021

c++/01_intro/: 01_variables.cpp  04_vars_pointers_refs.cpp  notes.md
c++/02_functions_and_arrays/: 01_auto.cpp  02_auto_functions.cpp  03_overloading.cpp  04_templates.cpp  05_static_arrays.cpp  06_dynamic_arrays.cpp  07_constexpr_functions.cpp  notes.md
c++/03_more_on_pointers_and_vectors/: 01_const_and_pointers.cpp  02_special_pointers.cpp  05_std_arrays.cpp  06_std_vectors.cpp  notes.md
c++/04_custom_types/: 01_enum.cpp  02_scoped_enum.cpp  03_namespace.cpp  04_why_scoped.cpp  05_struct_class.cpp  06_operator_overloading.cpp  07_multiple_flags.cpp  08_constructor_destructor.cpp  09_template_class.cpp  main_my_class.cpp  my_class.cpp  my_class.hpp  notes.md
c++/04_custom_types/exercises/date/: CMakeLists.txt  main.cpp
c++/04_custom_types/exercises/date/include/: catch.h  date.h  date_config.h.in  helper_functions.h
c++/04_custom_types/exercises/date/src/: CMakeLists.txt  date.cpp  helper_functions.cpp  invalid_date.cpp
c++/04_custom_types/exercises/date/test/: CMakeLists.txt  test.cpp
c++/05_copy_move_semantics/: 01_surprise.cpp  02_default.cpp  03_default.cpp  04_buggy_vector.cpp  05_buggy_vector.cpp  06_copy_move.cpp  notes.md
c++/06_error_handling/: notes.md
c++/07_live/: expression.cpp
c++/08_inheritance/: notes.md
python/01_intro/: 01_jupyter_intro.ipynb  03_lists.ipynb  04_tuples.ipynb  05_dictionaries.ipynb  06_sets.ipynb  07_functions.ipynb
python/02_symbols/: 01_copy_deepcopy.ipynb  02_global_local.ipynb  03_closures.ipynb  05_class.py  (+3 more)
(+27 files in other folders)
